language/tests/error/TypeError01.hashem
bebin azinja() {
  3 - "4";  
}  
